[package]
name = "demo-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-serialization-lib = "11.3.0"
hex = "0.4.0"
serde = "1.0.152"
serde_json = "1.0"
cardano-embedded-sdk = { version = "0.1.0", path = "../cardano-embedded-sdk" }
derivation-path = { version = "0.2.0", default-features = false }