[package]
authors = ["MLabs"]
edition = "2018"
readme = "README.md"
name = "qemu-example"
version = "0.1.0"

[dependencies]
cortex-m = "=0.7.7"
cortex-m-rt = "=0.7.3"
cortex-m-semihosting = "0.3.3"
derivation-path = { version = "0.2.0", default-features = false }
alloc-cortex-m = "=0.4.4"
panic-halt = "=0.2.0"

bip32-ed25519 = { git = "https://github.com/digitalbitbox/rust-bip32-ed25519", tag = "v0.1.0" }
cardano-embedded-sdk = { version = "0.1.0", path = "../cardano-embedded-sdk" }

# this lets you use `cargo fix`!
[[bin]]
name = "qemu-example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
