[package]
name = "cardano-crypto-tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = { version = "0.7.2", default-features = false }
cryptoxide = { version = "0.4.2", default-features = false }
ed25519-bip32 = { version = "0.4.1", path = "../rust-ed25519-bip32" }
hex = { version = "0.4.0", features = ["alloc"], default-features = false }

rand_core = { version = "0.6.4", default-features = false }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
