[package]
name = "cardano-embedded-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
cryptoxide = "0.1"
hex = "0.4.0"
ufmt = "0.2.0"

derivation-path = "0.2.0"
cardano-serialization-lib = { path = "../cardano-serialization-lib", version = "11.2.1" }

[dev-dependencies]
lazy_static = "1.2"
rand = "0.6"
serde_json = "1.0"
unicode-normalization = "0.1"
quickcheck = "0.8"
base64 = "0.9"
