[package]
name = "cardano-embedded-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
#cryptoxide = "0.1"
cryptoxide = { version = "0.4.2", default-features = false }
hex = { version = "0.4.0", features = ["alloc"], default-features = false }
#ufmt = "0.2.0"

derivation-path = "0.2.0"
cardano-crypto-tmp = { version = "0.1.0", path = "../cardano-crypto-tmp" }

[dev-dependencies]
lazy_static = "1.2"
rand = "0.6"
serde_json = "1.0"
unicode-normalization = "0.1"
quickcheck = "0.8"
base64 = "0.9"
