[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "=0.7.6"
cortex-m-rt = { version = "=0.7.3", features = ["device"] }
cortex-m-semihosting = "=0.5.0"
alloc-cortex-m = "=0.4.4"
panic-halt = "=0.2.0"

stm32f3xx-hal = { version = "=0.9.1", features = ["ld", "rt", "stm32f303xc"] }

usb-device = "=0.2.9"
usbd-serial = "=0.1.1"
usbd-webusb = "=1.0.2"

cardano-embedded-sdk = { vestion = "0.1.0", path = "../../cardano-embedded-sdk" }
derivation-path = { version = "0.2.0", default-features = false }

minicbor = { version = "0.19.0", default-features = false, features = ["alloc", "derive"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
