[package]
authors = []
edition = "2018"
readme = "README.md"
name = "embedano"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"

panic-halt = "0.2.0"

alloc-cortex-m = "0.4.4"
#embedded-alloc = "0.5.0"
stm32-hal2 = { version = "1.5.5", features = ["f303"] }

rand = { version = "0.7.3", default-features = false } # ed25519-dalek 1.0.1 depends on 0.7.*
rand_chacha = { version = "0.2.2", default-features = false } # 0.2.2 is compatibale with rand 0.7.*
ed25519-dalek = { version ="1.0.1", default-features = false, features = ["rand"] }
bip32-ed25519 = { git = "https://github.com/digitalbitbox/rust-bip32-ed25519", tag = "v0.1.0" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "embedano"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
